--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>App Academy DOM API Tic-Tac-Toe Project</title>
+  <link rel="stylesheet" href="./normalize.css">
   <link rel="stylesheet" href="./site.css">
 </head>
 
 <body>
   <div id="game">
     <h1 class="announcement" id="game-status">Tic Tac Toe</h1>
-    <h2 class="sub-announcement" id="player-tracker">X's Turn</h1>
+    <h2 class="sub-announcement" id="player-tracker">Dino's Turn</h1>
 
       <div id="tic-tac-toe-board">
         <div id="00" class="square row1 col1"></div>
